<resources>
    <string name="app_name">Pixeloca</string>
    <string name="intro_text">Welcome!\nPlease choose a username below.</string>
    <string name="caption">Caption</string>
    <string name="username">Name</string>
    <string name="location">Location</string>
    <string name="post_thumbnail">Post thumbnail</string>
    <string name="create_new_post">New Post</string>
    <string name="action_settings">Settings</string>
    <string name="button">Button</string>
    <string name="upload_post">Post</string>
    <string name="take_photo">Take Photo</string>
    <string name="comment">Comment</string>
    <string name="name">Name</string>
    <string name="date_and_time">Date and time</string>
</resources>
