<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="50dp"
        android:orientation="vertical"
        app:cardBackgroundColor="@color/cardview_light_background">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding">

            <ImageView
                android:id="@+id/post_thumbnail"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/post_thumbnail"
                app:srcCompat="@android:drawable/picture_frame"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="18dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="3">

                <TextView
                    android:id="@+id/post_caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/caption"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/post_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/username"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/post_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:textSize="14sp"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>