<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="50dp"
        android:orientation="vertical"
        android:requiresFadingEdge="vertical"
        app:cardBackgroundColor="@android:drawable/screen_background_light_transparent"
        app:cardCornerRadius="0dp"
        app:cardElevation="50dp">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingEnd="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingStart="10dp"
                    android:weightSum="1">

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/userImageView"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_marginBottom="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_weight="1"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@android:drawable/sym_def_app_icon"/>

                        <TextView
                            android:id="@+id/post_username"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_weight="1"
                            android:text="@string/username"
                            android:textColor="#23001E"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/userImageView"
                            app:layout_constraintTop_toTopOf="parent"/>
                    </android.support.constraint.ConstraintLayout>

                    <Button
                        android:id="@+id/display_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:background="@android:color/transparent"
                        android:padding="0dp"
                        android:text="Location"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="#0d4aff"/>

                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/post_thumbnail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:contentDescription="@string/post_thumbnail"
                app:srcCompat="@android:drawable/sym_def_app_icon"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="18dp"/>

            <TextView
                android:id="@+id/post_caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:text="@string/caption"
                android:textAlignment="viewStart"
                android:textColor="@color/carbon_black"
                android:textSize="16sp"
                />

            <TextView
                android:id="@+id/post_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="Date"
                android:textAlignment="viewStart"
                android:textAllCaps="true"
                android:textColor="@color/carbon_background_dark"
                android:textSize="12sp"/>

            <Button
                android:id="@+id/post_comments"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_margin="10dp"
                android:background="?attr/colorAccent"
                android:text="View comments"
                android:textColor="#b2ff00"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>